# with-adk-a2a-a2ui-agui

./: LICENSE  README.md  diagnostics.py  pyproject.toml  restaurant_app.py  travel_app.py
restaurant_finder_agent/: agent.py
travel_agent/: agent.py
